@@ -13,7 +13,7 @@
   <groupId>com.azure</groupId>
   <artifactId>azure-core-test</artifactId>
   <packaging>jar</packaging>
-  <version>1.5.0-beta.1</version> <!-- {x-version-update;com.azure:azure-core-test;current} -->
+  <version>1.6.0-beta.1</version> <!-- {x-version-update;com.azure:azure-core-test;current} -->
 
   <name>Microsoft Azure Java Core Test Library</name>
   <description>This package contains core test types for Azure Java clients.</description>
@@ -37,7 +37,7 @@
     <dependency>
       <groupId>com.azure</groupId>
       <artifactId>azure-core</artifactId>
-      <version>1.9.0-beta.1</version> <!-- {x-version-update;com.azure:azure-core;current} -->
+      <version>1.10.0-beta.1</version> <!-- {x-version-update;com.azure:azure-core;current} -->
     </dependency>
 
     <dependency>
@@ -136,6 +136,7 @@
                 --add-exports org.junit.platform.commons/org.junit.platform.commons.logging=ALL-UNNAMED
 
                 --add-reads com.azure.core.test=ALL-UNNAMED
+                --add-opens com.azure.core.test/com.azure.core.test.models=ALL-UNNAMED
               </argLine>
             </configuration>
           </plugin>
